// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CPlaceholder customize 1`] = `
<div>
  <span
    class="placeholder-glow bg-secondary placeholder-lg col-sm-7 bazinga"
  />
</div>
`;

exports[`loads and displays CPlaceholder component 1`] = `
<div>
  <span
    class="placeholder bg-primary"
  />
</div>
`;
